[gd_scene load_steps=5 format=3 uid="uid://dhrftd3ni6d20"]

[ext_resource type="Script" path="res://scenes/game/music.gd" id="1_qp1t4"]
[ext_resource type="AudioStream" uid="uid://pfr5ilmpa2me" path="res://scenes/game/music_1.mp3" id="2_0bhsw"]
[ext_resource type="AudioStream" uid="uid://c3h5p4m001fve" path="res://scenes/game/music_2.mp3" id="3_cb8nm"]
[ext_resource type="AudioStream" uid="uid://cp85uoga2ga5v" path="res://scenes/game/music_3.mp3" id="4_jcbtb"]

[node name="Music" type="Node"]
script = ExtResource("1_qp1t4")

[node name="Layer1" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_0bhsw")
volume_db = -80.0
bus = &"Music"

[node name="Layer2" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_cb8nm")
volume_db = -80.0
bus = &"Music"

[node name="Layer3" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_jcbtb")
volume_db = -80.0
bus = &"Music"
